# xlxscrapper_rs

./: .gitignore  Cargo.toml  README.md  config_sample.json
src/: globals.rs  main.rs
src/mods/: downloader.rs
