[package]
name = "xlxscrapper"
version = "0.1.0"
edition = "2024"

[dependencies]
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13", features = ["blocking"] }
chrono = "0.4"
log = "0.4"
simple_logger = "5"
anyhow = "1.0"
sha2 = "0.10"
